testing/tests/ui/extends.stderr
error: the previous template error derives from
 --> tests/ui/extends.rs:5:14
  |
5 |     source = r#"{%- extends "whatever.html" %}"#,
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the previous template error derives from
  --> tests/ui/extends.rs:12:14
   |
12 |     source = r#"{% extends "whatever.html" -%}"#,
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
